packages/astro/e2e/fixtures/errors/src/pages/dom-exception.astro
---
await fetch("https://example.com/", {signal: AbortSignal.timeout(5)})
---
